--- a/src/patternfly/components/Label/label.scss
+++ b/src/patternfly/components/Label/label.scss
@@ -7,10 +7,11 @@
   --#{$label}--PaddingInlineStart: var(--pf-t--global--spacer--sm);
   --#{$label}--MaxWidth: 100%;
   --#{$label}--MinWidth: calc((var(--#{$label}--FontSize) * var(--pf-t--global--font--line-height--body) + var(--#{$label}--PaddingBlockStart) + var(--#{$label}--PaddingBlockEnd)));
-  --#{$label}--BorderWidth: 0;
-  --#{$label}--BorderColor: transparent;
+  --#{$label}--BorderWidth: var(--pf-t--global--border--width--regular);
+  --#{$label}--BorderColor: var(--pf-t--global--border--color--high-contrast);
   --#{$label}--BorderRadius: var(--pf-t--global--border--radius--pill);
   --#{$label}--FontSize: var(--pf-t--global--font--size--body--sm);
+  --#{$label}--Gap: var(--pf-t--global--spacer--gap--text-to-element--compact);
 
   // Gray (default)
   --#{$label}--BackgroundColor: var(--pf-t--global--color--nonstatus--gray--default);
@@ -163,8 +164,8 @@
   --#{$label}--m-custom--m-outline--m-clickable--hover__icon--Color: var(--pf-t--global--icon--color--status--custom--hover);
 
   // Clickable
-  --#{$label}--m-clickable--hover--BorderWidth: 0;
-  --#{$label}--m-clickable--hover--BorderColor: transparent;
+  --#{$label}--m-clickable--hover--BorderWidth: var(--pf-t--global--border--width--action--hover);
+  --#{$label}--m-clickable--hover--BorderColor: var(--pf-t--global--border--color--high-contrast);
   --#{$label}--m-clickable__content--Cursor: pointer;
 
   // Filled
@@ -183,8 +184,10 @@
   // Overflow
   --#{$label}--m-overflow--Color: var(--pf-t--global--text--color--brand--default);
   --#{$label}--m-overflow--BackgroundColor: var(--pf-t--global--background--color--action--plain--default);
+  --#{$label}--m-overflow--BorderWidth: var(--pf-t--global--border--width--action--default);
   --#{$label}--m-overflow--hover--Color: var(--pf-t--global--text--color--brand--hover);
   --#{$label}--m-overflow--hover--BackgroundColor: var(--pf-t--global--background--color--action--plain--hover);
+  --#{$label}--m-overflow--hover--BorderWidth: var(--pf-t--global--border--width--action--hover);
 
   // Add
   --#{$label}--m-add--Color: var(--pf-t--global--text--color--brand--default);
@@ -217,17 +220,17 @@
   --#{$label}__text--MaxWidth: 100%;
 
   // Actions
-  --#{$label}__actions--MarginInlineEnd: calc(var(--#{$label}__actions--c-button--PaddingInlineEnd) * -1);
+  --#{$label}__actions--MarginInlineEnd: 0; // TODO - remove in breaking change
 
   // Actions button (close)
   --#{$label}__actions--c-button--FontSize: var(--pf-t--global--icon--size--font--body--sm);
   --#{$label}__actions--c-button--OutlineOffset: #{pf-size-prem(-3px)};
-  --#{$label}__actions--c-button--MarginBlockStart: calc(var(--#{$label}__actions--c-button--PaddingBlockStart) * -1);
-  --#{$label}__actions--c-button--MarginBlockEnd: calc(var(--#{$label}__actions--c-button--PaddingBlockEnd) * -1);
-  --#{$label}__actions--c-button--PaddingBlockStart: var(--pf-t--global--spacer--xs);
-  --#{$label}__actions--c-button--PaddingInlineEnd: var(--pf-t--global--spacer--xs);
-  --#{$label}__actions--c-button--PaddingBlockEnd: var(--pf-t--global--spacer--xs);
-  --#{$label}__actions--c-button--PaddingInlineStart: var(--pf-t--global--spacer--xs);
+  --#{$label}__actions--c-button--MarginBlockStart: 0; // TODO - remove in breaking change
+  --#{$label}__actions--c-button--MarginBlockEnd: 0; // TODO - remove in breaking change
+  --#{$label}__actions--c-button--PaddingBlockStart: 0; // TODO - remove in breaking change
+  --#{$label}__actions--c-button--PaddingInlineEnd: 0; // TODO - remove in breaking change
+  --#{$label}__actions--c-button--PaddingBlockEnd: 0; // TODO - remove in breaking change
+  --#{$label}__actions--c-button--PaddingInlineStart: 0; // TODO - remove in breaking change
 
   // Editable
   --#{$label}--m-editable--TextDecorationLine: var(--pf-t--global--text-decoration--editable-text--line--default);
@@ -253,6 +256,7 @@
 
 .#{$label} {
   position: relative;
+  gap: var(--#{$label}--Gap);
   min-width: var(--#{$label}--MinWidth);
   max-width: var(--#{$label}--MaxWidth);
   padding-block-start: var(--#{$label}--PaddingBlockStart);
@@ -474,10 +478,12 @@
   &.pf-m-overflow {
     --#{$label}--Color: var(--#{$label}--m-overflow--Color);
     --#{$label}--BackgroundColor: var(--#{$label}--m-overflow--BackgroundColor);
+    --#{$label}--BorderWidth: var(--#{$label}--m-overflow--BorderWidth);
 
     &:is(:hover, :focus) {
       --#{$label}--m-overflow--Color: var(--#{$label}--m-overflow--hover--Color);
       --#{$label}--m-overflow--BackgroundColor: var(--#{$label}--m-overflow--hover--BackgroundColor);
+      --#{$label}--m-overflow--BorderWidth: var(--#{$label}--m-overflow--hover--BorderWidth);
     }
   }
 
@@ -582,6 +588,10 @@
   margin-inline-end: var(--#{$label}__actions--MarginInlineEnd);
 
   .#{$button} {
+    @at-root .#{$label}.pf-m-compact & {
+      --#{$button}--m-plain--m-no-padding--after--Inset: 0 calc(#{pf-size-prem(2px) * -1});
+    }
+
     --#{$button}--FontSize: var(--#{$label}__actions--c-button--FontSize);
     --#{$button}--m-plain--m-no-padding--PaddingBlockStart: var(--#{$label}__actions--c-button--PaddingBlockStart);
     --#{$button}--m-plain--m-no-padding--PaddingInlineEnd: var(--#{$label}__actions--c-button--PaddingInlineEnd);
